--- a/assets/sass/04-content-modules/swordion-only.scss
+++ b/assets/sass/04-content-modules/swordion-only.scss
@@ -91,6 +91,33 @@
 	}
 }
 
+.navExample {
+	@include M-mq(max,bp('tablet')){
+		@include M-prefix(flex-wrap, wrap, $flexPrefixes);
+	}
+	&-link {
+		@include M-grad(rgba(#fff,0.4),rgba(#000,0.6));
+		background-color: $purple-mid;
+		@include M-animate(0.2s);
+		color: #fff;
+		padding: 5px;
+		text-align: center;
+		border-left: 1px solid #ccc;
+		&:first-child { border-left: none; }
+		@include M-hover {
+			background-color: $purple-dark;
+			text-decoration: none;
+			@include M-pos(20px center);
+		}
+		@include M-mq(max,bp('tablet')){
+			width: 50%;
+		}
+		@include M-mq(max,bp('mobile')){
+			width: 100%;
+		}
+	}
+}
+
 @include M-lt-ie9 {
 	/*this should appear in the IE8 style sheet but not the regular one*/
 }
