--- a/assets/sass/import-maps/config-map.scss
+++ b/assets/sass/import-maps/config-map.scss
@@ -2,6 +2,7 @@
 
 @import "../00-config-files/break-points";
 @import "../00-config-files/colors";
+@import "../00-config-files/columns";
 @import "../00-config-files/fonts";
 @import "../00-config-files/icons";
 @import "../00-config-files/sprite-sheets/HD-primary-sprites";
