--- a/assets/sass/01-global-mixins/_functions.scss
+++ b/assets/sass/01-global-mixins/_functions.scss
@@ -23,6 +23,29 @@
   @return $number / ($number * 0 + 1);
 }
 
+//**
+// * Returns whether `$list` contains `$value`.
+// *
+// * @ignore Documentation: http://sassylists.com/documentation.html#sl-contain
+// *
+// * @param {List}    $list  - list to check
+// * @param {*}       $value - value to look for
+// *
+// * @example
+// * sl-contain(a b c, a)
+// * // true
+// *
+// * @example
+// * sl-contain(a b c, z)
+// * // false
+// *
+// * @return {Bool}
+// */
+
+@function contains($list, $value) {
+  @return not not index($list, $value);
+}
+
 //Functions taken from: http://hugogiraudel.com/2013/08/08/advanced-sass-list-functions/
 
 //REVERSE A SASS LIST
