--- a/assets/sass/import-maps/base-map.scss
+++ b/assets/sass/import-maps/base-map.scss
@@ -5,3 +5,4 @@
 @import "../02-base/02-buttons";
 @import "../02-base/03-columns";
 @import "../02-base/forms-base";
+@import "../02-base/structure";
