Added .columns--padding-# classes
I realised I should have a quick and easy way to add padding to the columns.

--- a/assets/sass/02-base/03-columns.scss
+++ b/assets/sass/02-base/03-columns.scss
@@ -91,6 +91,14 @@
 		}
 	}
 
+	@each $pad in $columnPadding {
+		&--padding-#{$pad} {
+			> .columns-col {
+				padding: $pad * 1px;
+			}
+		}
+	}
+
 	@include M-gt-ie8 {
 		&--vAlign > .columns-col {
 			@include M-flex;
