--- a/assets/sass/00-config-files/columns.scss
+++ b/assets/sass/00-config-files/columns.scss
@@ -9,6 +9,12 @@
 //usage: .columns--gutter-20
 $columnGutters: 5, 10, 15, 20, 25, 30;
 
+
+//You can alter the available column padding sizes here
+//usage: .columns--padding-20
+$columnPadding: 5, 10, 15, 20, 25, 30;
+
+
 //Set the points at which percentage based columns change width
 //@class [string]: The modifire class added to the columns class eg. .columns--halves
 //@breaks [list OR false booleen]: a list of screensizes at which point the column width changes
