Column gutter support for a 1px "border"
(it actually needs to be an outline not a border for it to work)

--- a/assets/sass/02-base/03-columns.scss
+++ b/assets/sass/02-base/03-columns.scss
@@ -87,6 +87,7 @@
 			margin: -$actualGutter;
 			> .columns-col {
 				border-width: $actualGutter;
+				outline-offset: -$actualGutter - 1;
 			}
 		}
 	}
