Columns: updating --span-# class; nav padding handled by class now
updating the class so that it is consistent with the gutter and padding classes

--- a/assets/sass/02-base/03-columns.scss
+++ b/assets/sass/02-base/03-columns.scss
@@ -43,7 +43,7 @@
 
 		@if ($i > 2){
 			@for $x from 2 through ($i - 1) {
-				&--span#{$x} { width: percentage($x/$i); }
+				&--span-#{$x} { width: percentage($x/$i); }
 			}
 		}
 
