Icon mixin minor improvements
- added text-indent: 0; which helps if parent has visually hidden text
- grouped the properties nicely
- removed redundant line-height and display properties

--- a/assets/sass/01-global-mixins/_icons.scss
+++ b/assets/sass/01-global-mixins/_icons.scss
@@ -36,14 +36,13 @@
 //styles that are the same for all icons
 @mixin M-icon-static-styles {
 	font-family: 'icons';
-	speak: none;
 	font-style: normal;
 	font-weight: normal;
 	font-variant: normal;
+	speak: none;
 	text-transform: none;
-	line-height: 1;
-	display: inline-block;
     text-align: center;
+	text-indent: 0;
 	vertical-align: middle;
 
 	//* Better Font Rendering =========== */
