--- a/assets/sass/import-maps/base-map.scss
+++ b/assets/sass/import-maps/base-map.scss
@@ -3,6 +3,6 @@
 @import "../02-base/00-elements";
 @import "../02-base/01-tools";
 @import "../02-base/02-buttons";
-@import "../02-base/03-columns";
+@import "../02-base/03-grid";
 @import "../02-base/forms-base";
 @import "../02-base/structure";
