--- a/assets/sass/import-maps/config-map.scss
+++ b/assets/sass/import-maps/config-map.scss
@@ -2,8 +2,8 @@
 
 @import "../00-config-files/break-points";
 @import "../00-config-files/colors";
-@import "../00-config-files/columns";
 @import "../00-config-files/fonts";
+@import "../00-config-files/grid";
 @import "../00-config-files/icons";
 @import "../00-config-files/sprite-sheets/HD-primary-sprites";
 @import "../00-config-files/sprite-sheets/HD-retina-sprites";
