--- a/assets/sass/00-config-files/grid.scss
+++ b/assets/sass/00-config-files/grid.scss
@@ -9,6 +9,14 @@
 //usage: .grid--gutter-20
 $cellGutters: 5, 10, 15, 20, 25, 30;
 
+//You can alter the available grid outline thicknesses here
+//usage: .grid--outline-2
+$cellOutlines: 1, 2, 3, 4, 5;
+
+//You can alter the available grid gutter sizes here
+//usage: .grid--gutter-20
+$cellGutters: 5, 10, 15, 20, 25, 30;
+
 
 //You can alter the available grid padding sizes here
 //usage: .grid--padding-20
