--- a/assets/sass/01-global-mixins/_functions.scss
+++ b/assets/sass/01-global-mixins/_functions.scss
@@ -2,6 +2,14 @@
 //  sass functions  //
 /////////////////////
 
+//Check if a value is an even number
+@function isEven($value) {
+	@if ($value % 2 == 0) {
+		@return true;
+	} @else {
+		@return false;
+	}
+}
 
 // map-fetch($map, $keys)
 //https://gist.github.com/jlong/8760275
