--- a/assets/sass/00-config-files/grid.scss
+++ b/assets/sass/00-config-files/grid.scss
@@ -15,7 +15,7 @@ $cellOutlines: 1, 2, 3, 4, 5;
 
 //You can alter the available grid outline thicknesses here
 //usage: .grid--outline-2
-$cellBorders: 2, 4, 6;
+$cellBorders: 1, 2, 3, 4, 5, 10;
 
 //You can alter the available grid padding sizes here
 //usage: .grid--padding-20
