grid-cell--span-# classes now work if $defaultWidth is altered

--- a/assets/sass/02-base/03-grid.scss
+++ b/assets/sass/02-base/03-grid.scss
@@ -46,7 +46,7 @@
 //.grid-cell--span-# styling
 		@if ($i > 2){
 			@for $x from 2 through ($i - 1) {
-				&--span-#{$x} { width: percentage($x/$i); }
+				&--span-#{$x} { width: $defaultWidth * $x; }
 			}
 		}
 
