--- a/assets/sass/00-config-files/grid.scss
+++ b/assets/sass/00-config-files/grid.scss
@@ -7,7 +7,7 @@
 
 //You can alter the available grid gutter sizes here
 //usage: .grid--gutter-20
-$cellGutters: 5, 10, 15, 20, 25, 30;
+$cellGutters: 5, 10, 15, 20, 25, 30, 35;
 
 //You can alter the available grid outline thicknesses here
 //usage: .grid--outline-2
