Revert "X - unfinished grid"
This reverts commit ccb1a0f0666dd7c8e20f9c64d7f3671c7ae9a7e3.

--- a/assets/sass/02-base/03-grid.scss
+++ b/assets/sass/02-base/03-grid.scss
@@ -39,33 +39,28 @@
 	$breaks: map-get($array, breaks);
 
 //sets the default grid-cell widths
-	.grid--#{$class} {
-		> .grid-cell {
-			//width: percentage(1/$i); //The clever way :D
-			width: $defaultWidth; //more editable way -_-
+	.grid--#{$class}:not(.grid--disableMQs) > .grid-cell {
+		//width: percentage(1/$i); //The clever way :D
+		width: $defaultWidth; //more editable way -_-
 
 //.grid-cell--span-# styling
-			@if ($i > 2){
-				@for $x from 2 through ($i - 1) {
-					&--span-#{$x} { width: $defaultWidth * $x; }
-				}
+		@if ($i > 2){
+			@for $x from 2 through ($i - 1) {
+				&--span-#{$x} { width: $defaultWidth * $x; }
 			}
+		}
 
 //Applies the media queries for the break points
-			&:not(.grid--disableMQs) {
-				@if ($breaks != false) {
-					@for $y from 1 through length($breaks) {
-						$breakData : nth($breaks, $y);
-						$device : nth($breakData, 1);
-						$width : nth($breakData, 2);
-						@include M-mq(max,$device){
-							width: $width;
-						}
-					}
+		@if ($breaks != false) {
+			@for $y from 1 through length($breaks) {
+				$breakData : nth($breaks, $y);
+				$device : nth($breakData, 1);
+				$width : nth($breakData, 2);
+				@include M-mq(max,$device){
+					width: $width;
 				}
 			}
 		}
-		&.grid--enableWrapping{  }
 	}
 }
 
@@ -79,22 +74,7 @@
 		@include M-prefix(align-content, stretch, $flexPrefixes);
 
 		&:not(.grid--noWrap){
-		}
-	}
-
-//Unfortunately this is a necessity for IE compatibility
-	&--enableWrapping {
-
-		}
-		display: block;
-		@include M-gt-ie8 {
-			.flexbox & {
-				@include M-flex;
-				@include M-prefix(flex-wrap, wrap, $flexPrefixes);
-			}
-		}
-		& > .grid-cell {
-			float: left;
+			@include M-prefix(flex-wrap, wrap, $flexPrefixes);
 		}
 	}
 
