--- a/assets/sass/04-content-modules/swordion-only.scss
+++ b/assets/sass/04-content-modules/swordion-only.scss
@@ -38,7 +38,7 @@
 .animationDemoItem {
 	//border-width: 5px;
 	padding: 20px;
-	background-color: #000;
+	background-color: $c-primary;
 	color: #fff;
 	text-align: center;
 	outline-color: $purple-light;
