Fixed a bug with grid--disableMQs

--- a/assets/sass/02-base/03-grid.scss
+++ b/assets/sass/02-base/03-grid.scss
@@ -91,7 +91,9 @@
 		@include M-prefix(align-content, stretch, $flexPrefixes);
 
 		@include M-mq(max,bp('large')){
-			@include M-prefix(flex-wrap, wrap, $flexPrefixes);
+			&:not(.grid--disableMQs) {
+				@include M-prefix(flex-wrap, wrap, $flexPrefixes);
+			}
 		}
 	}
 
