Fixed a bug with the tweak point function

--- a/assets/sass/00-config-files/break-points.scss
+++ b/assets/sass/00-config-files/break-points.scss
@@ -36,10 +36,7 @@ $breakPoints: (
 //	Do not share tweak points between modules.
 //*================================================*/
 
-//only stating tweak points here for the sake of the function
-//Do not place tweak points in here!
-$tweakPoints: ();
-
 @function tp($value){
+	$tweakPoints: () !default;
 	@return map-get($tweakPoints, $value);
 }
