--- a/assets/sass/00-config/icons.scss
+++ b/assets/sass/00-config/icons.scss
@@ -19,7 +19,7 @@
 //*================================================*/
 
 //Use this regular expression to find/replace the css icomoon generates
-//find: \.icon-([a-zA-Z-]*):before\s{\r\n\tcontent:\s("\\[a-zA-Z0-9]*");\r\n}\r\n
+//find: \.icon-([a-zA-Z0-9-_]*):before\s{\r\n\tcontent:\s("\\[a-zA-Z0-9]*");\r\n}\r\n
 //replace with: \1: \2,
 
 //expects this css format:
