--- a/assets/sass/02-mixins/01-media-queries.scss
+++ b/assets/sass/02-mixins/01-media-queries.scss
@@ -3,132 +3,148 @@
 // ******************************************************/
 $fix-mqs: false !default;
 
+$mediaQuery: ();
+
+
+@function calculateMQ ($range, $setting1: null, $setting2: null){
+
+	$mediaString: '';
+
+	$errorMessage: "first width setting (#{$setting1}) must be higher than the second width setting (#{$setting2})";
+
+	@if (($setting2 != null) and ($setting1 < $setting2)){
+		@error $errorMessage;
+	}
+
+	// if has both min and max-widths
+	// if has both min and max-widths
+	@if ($setting2 != null) {
+
+		@if ($range == 'inside') {
+			$mediaString:'screen and (max-width: #{$setting1 + 1}) and (min-width: #{$setting2})';
+
+			//@debug $mediaQuery;
+
+		} @else if ($range == 'outside') {
+			$mediaString:'not screen and (max-width: #{$setting1 + 1}) and (min-width: #{$setting2})';
+		}
+
+	} @else {// else output min or max width
+
+		@if ($range == 'min') {
+			$mediaString:'screen and (min-width: #{$setting1 + 1})';
+
+		} @else if ($range == 'max') {
+			$mediaString:'screen and (max-width: #{$setting1})';
+		}
+	}
+
+	@return $mediaString;
+}
+
+@function ieMQtest ($range, $width1: null, $width2: null) {
+
+
+	@if ($lt-ie9){
+		$test: (
+			(($fix-mqs >= $width1) and ($range == 'min')) or
+			(($width2 != null) and ($fix-mqs >= $width1) and ($range == 'outside')) or
+			(($width2 != null) and ($fix-mqs <= $width1) and ($fix-mqs >= $width2) and ($range == 'inside'))
+		);
+
+		@return $test;
+	} @else {
+		@return false;
+	}
+}
 
 @mixin M-mq($range, $setting1: null, $setting2: null) {
 
-	$mediaString: '';
-	$mediaQuery: ();
-	$errorMessage: "first width setting (#{$setting1}) must be lower than the second width setting (#{$setting2})";
+	@if (length($range) > 1) {
 
-	@if ($setting1 == null) {
+		//Uses this functionality if using a single level MQ variable
+		//eg:
+		//$MQ-example--single: inside, bp('large'), bp('tablet'));
+		//@include M-mq($MQ-example--single){}
+		@if (type-of(nth($range,1)) == string){
 
-		//@for $i from 1 through length($range) {
-		@each $mqSet in $range {
-			$newRange: nth($mqSet,1);
-			$newWidth: nth($mqSet,2);
+			$newRange: nth($range,1);
+			$newWidth1: nth($range,2);
 			$newWidth2: null;
-			@if (length($mqSet) == 3){
+			@if (length($range) == 3){
 				$newWidth2: nth($mqSet,3);
 			}
 
 
-			@if (($newWidth2 != null) and ($newWidth > $newWidth2)){
-				@error $errorMessage;
+			@if (ieMQtest($newRange, $newWidth1, $newWidth2)) {
+				@content;
+			} @else if ($lt-ie9 == false) {
+				@media #{calculateMQ($newRange, $newWidth1, $newWidth2)} {
+					@content;
+				}
 			}
 
-			@if ($lt-ie9 == true) {
+		//Uses this functionality if using a multi level MQ variable
+		//eg:
+		//$MQ-example--multiple:
+		//	(inside, bp('large'), bp('tablet')),
+		//	(min, bp('page'))
+		//;
+		//@include M-mq($MQ-example--multiple){}
+		} @else {
+			$mediaQuery: ();
 
-				@if (($fix-mqs >= $newWidth) and ($newRange == 'min')) {
-					@content;
-				} @else if (($newWidth2 != null) and ($fix-mqs >= $newWidth2) and ($newRange == 'outside')) {
-					@content;
-				} @else if (($newWidth2 != null) and ($fix-mqs >= $newWidth) and ($fix-mqs <= $newWidth2) and ($newRange == 'inside')) {
-					@content;
+			@each $mqSet in $range {
+
+				$newRange: nth($mqSet,1);
+				$newWidth1: nth($mqSet,2);
+				$newWidth2: null;
+				@if (length($mqSet) == 3){
+					$newWidth2: nth($mqSet,3);
 				}
 
-			} @else {
-				// if has both min and max-widths
-				// if has both min and max-widths
-				@if ($newWidth2 != null) {
-
-					@if ($newRange == inside) {
-						$mediaString:'screen and (min-width: #{$newWidth + 1}) and (max-width: #{$newWidth2})';
-						$mediaQuery: append($mediaQuery, $mediaString, 'comma');
-
-						//@debug $mediaQuery;
-
-					} @else if ($range == outside) {
-						$mediaString:'not screen and (min-width: #{$newWidth + 1}) and (max-width: #{$newWidth2})';
-						$mediaQuery: append($mediaQuery, $mediaString, 'comma');
-					}
-
-				} @else {// else output min or max width
-
-					@if ($newRange == 'min') {
-						$mediaString:'screen and (min-width: #{$newWidth + 1})';
-						$mediaQuery: append($mediaQuery, $mediaString, 'comma');
-
-					} @else if ($newRange == 'max') {
-						$mediaString:'screen and (max-width: #{$newWidth})';
-						$mediaQuery: append($mediaQuery, $mediaString, 'comma');
-					}
+				@if (($lt-ie9 == true) and (ieMQtest($newRange, $newWidth1, $newWidth2))) {
+					@content;
+				} @else {
+					$mediaQuery: append($mediaQuery, calculateMQ($newRange, $newWidth1, $newWidth2), 'comma');
 				}
-			}//end IE check
+			}//end @each
 
-		}//end @each
-
-		@if ($lt-ie9 == false) {
-			@media #{$mediaQuery} {
-				@content;
+			@if ($lt-ie9 == false) {
+				@media #{$mediaQuery} {
+					@content;
+				}
 			}
 		}
+
+	//Uses this functionality if placing MQ data inline
+	//eg:
+	//@include M-mq(inside, bp('large'), bp('tablet'));
 	} @else {
 
-		@if (($setting2 != null) and ($setting1 > $setting2)){
-			@error $errorMessage;
-		}
-
-
-		@if ($lt-ie9 == true) {
-			@if (($fix-mqs >= $setting1) and ($range == 'min')) {
-				@content;
-			} @else if (($setting2 != null) and ($fix-mqs >= $setting2) and ($range == 'outside')) {
-				@content;
-			} @else if (($setting2 != null) and ($fix-mqs >= $setting1) and ($fix-mqs <= $setting2) and ($range == 'inside')) {
-				@content;
-			}
+		@if (ieMQtest($range, $setting1, $setting2)) {
+			@content;
 		} @else {
-			// if has both min and max-widths
-			// if has both min and max-widths
-			@if $setting2 {
-
-				@if ($range == inside) {
-					@media screen and (min-width: #{$setting1 + 1}) and (max-width: $setting2) {
-						@content;
-					}
-				} @else if ($range == outside) {
-					@media not screen and (min-width: #{$setting1 + 1}) and (max-width: $setting2) {
-						@content;
-					}
+			@if ($lt-ie9 == false) {
+				@media #{calculateMQ($range, $setting1, $setting2)} {
+					@content;
 				}
 			}
-
-			// else output min or max width
-			@else {
-				@if ($range == 'min') {
-					@media screen and (min-width: #{$setting1 + 1}) {
-						@content;
-					}
-				}
-				@else if ($range == 'max') {
-					@media screen and (max-width: $setting1) {
-						@content;
-					}
-				}
-			}
-		}//end IE check
+		}
 
 	}
 }
 
 
 @mixin M-retina {
-  	@media
-		only screen and (-webkit-min-device-pixel-ratio: 2),
-		only screen and (        min-device-pixel-ratio: 2),
-		only screen and (           min-resolution: 192ppi),
-		only screen and (            min-resolution: 2dppx) {
-			@content;
+	@if ($lt-ie9 == false) {
+	  	@media
+			only screen and (-webkit-min-device-pixel-ratio: 2),
+			only screen and (        min-device-pixel-ratio: 2),
+			only screen and (           min-resolution: 192ppi),
+			only screen and (            min-resolution: 2dppx) {
+				@content;
+		}
 	}
 }
 
@@ -137,7 +153,7 @@ $fix-mqs: false !default;
 //*********************************/
 
 $BP-mobile: bp('mobile');
-$BP-tablet: $BPG-sideNav--accordionStyle;
+$BP-tablet: bp('tablet');
 
 @mixin M-mobileOnly {
 	@include M-mq(min, $BP-mobile){
@@ -146,7 +162,7 @@ $BP-tablet: $BPG-sideNav--accordionStyle;
 }
 
 @mixin M-tabletOnly {
-	@include M-mq(outside, $BP-mobile, $BP-tablet){
+	@include M-mq(outside, $BP-tablet, $BP-mobile){
 		display: none!important;
 	}
 }
@@ -164,7 +180,7 @@ $BP-tablet: $BPG-sideNav--accordionStyle;
 }
 
 @mixin M-nonTablet {
-	@include M-mq(inside, $BP-mobile, $BP-tablet){
+	@include M-mq(inside, $BP-tablet, $BP-mobile){
 		display: none!important;
 	}
 }
